# Veeam-Test-Task

./: CMakeLists.txt  README.md  task.txt.txt
veeam_test/: CMakeLists.txt  utils.hpp  veeam_test.cpp  veeam_test.h
